--- a/packages/html/ui/site.css
+++ b/packages/html/ui/site.css
@@ -258,24 +258,3 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
 	margin-left: auto !important;
 	margin-right: auto !important;
 }
-
-/* for editor only, but semantic-ui dependent */
-[contenteditable] .ui.buttons .disabled.button,
-[contenteditable] .ui.disabled.button,
-[contenteditable] .ui.button:disabled,
-[contenteditable] .ui.disabled.button:hover,
-[contenteditable] .ui.disabled.active.button {
-	pointer-events: auto !important;
-}
-
-[contenteditable] .ui.dropdown[block-focused] > .menu {
-	overflow: visible;
-	width: auto;
-	height: auto;
-	top: 100% !important;
-	opacity: 1;
-}
-
-[contenteditable] .field[block-focused] .dropdown > .menu {
-	display: block !important;
-}
